# rust-pump-token

./: Cargo.toml  README.md
assets/: generated_tokens.md  token_1.json  token_2.json
src/: blockchain_interaction.rs  main.rs  token_generator.rs  user_interface.rs
