[package]
name = "rust_pump_token"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-client = "1.10"
solana-sdk = "1.10"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"  # For random number generation
